# gpn-backend-test-task

./: .dockerignore  Justfile  pyproject.toml  readme.md
.github/workflows/: main.yml
app/: application.py  auth.py  constraints.py  error_messages.py  ioc.py  models.py  repositories.py  schemas.py  settings.py
app/api/: notes.py  users.py
app/models/: __init__.py  notes.py  users.py
app/resources/: db.py
app/schemas/: __init__.py  notes.py
migrations/: script.py.mako
migrations/versions/: 2025-09-26_add_notes.py  2025-09-26_add_users.py  2025-09-27_add_login_index.py
scripts/: seed_db.py
scripts/fixtures/: notes.json  users.json
tests/: conftest.py  factories.py  test_auth.py  test_notes.py  utils.py
